--- a/afkortingen.tex
+++ b/afkortingen.tex
@@ -1,2 +1,2 @@
-\chapter*{Lijst van afkortingen}
-\addcontentsline{toc}{chapter}{Lijst met afkortingen}
+\chapter*{List of abbreviations}
+\addcontentsline{toc}{chapter}{List of abbreviations}
