--- a/fiiw_eng.sty
+++ b/fiiw_eng.sty
@@ -18,6 +18,7 @@
 \usepackage{color}
 \usepackage{parallel}
 \usepackage{textpos}
+\usepackage{geometry}
 
 % \usepackage[scaled]{uarial}
 \renewcommand*\familydefault{\sfdefault} %% Only if the base font of the document is to be sans serif
