--- a/symbolen.tex
+++ b/symbolen.tex
@@ -1,5 +1,5 @@
-\chapter*{Lijst van symbolen}
-\addcontentsline{toc}{chapter}{Symbolenlijst}
+\chapter*{List of symbols}
+\addcontentsline{toc}{chapter}{List of symbols}
 
 Maak een lijst van de gebruikte symbolen. Geef het symbool, naam en eenheid. Gebruik steeds SI-eenheden en gebruik de symbolen en namen zoals deze voorkomen in de hedendaagse literatuur en normen. De symbolen worden alfabetisch gerangschikt in opeenvolgende lijsten: kleine letters, hoofdletters, Griekse kleine letters, Griekse hoofdletters. Onderstaande tabel geeft het format dat kan ingevuld en uitgebreid worden. Wanneer het symbool een eerste maal in de tekst of in een formule wordt gebruikt, moet het symbool verklaard worden. Verwijder deze tekst wanneer je je thesis maakt.
 
