--- a/thesis.tex
+++ b/thesis.tex
@@ -8,7 +8,7 @@
 %\documentclass[11pt,a4paper,twoside,openright]{report}
 
 \usepackage[a4paper,left=3.5cm, right=2.5cm, top=3.5cm, bottom=3.5cm]{geometry}
-\usepackage[dutch]{babel}
+\usepackage[english]{babel}
 \usepackage{graphicx}
 \usepackage[latin1]{inputenc}           % om niet ascii karakters rechtstreeks te kunnen inputten
 %\usepackage[utf8]{inputenc}            % commentarieer deze regel uit als je utf8 encoded files gebruikt in plaats van latin1
@@ -39,7 +39,7 @@
 \graphicspath{{fig/}}
 
 \usepackage{fiiw}
-% \usepackage{fiiw_eng} % For the english version (also change last page at the bottom of this file!
+%\usepackage{fiiw_eng} % For the english version (also change last page at the bottom of this file!
 
 %door onderstaande regels in commentaar te zetten, of op false, kan je pagina's weglaten
 %bijvoorbeeld het weglaten van een voorwoord, lijst met symbolen, ...
@@ -68,33 +68,33 @@
 
 %informatie over het eindwerk, de promotor, ...
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\opleiding{naam opleiding}
-\afdeling{afstudeerrichting vermelden}
+\opleiding{Electronical engineering}
+\afdeling{}
 
-\campus{denayer} %denayer,denayereng,geel,geeleng,gent,ghenteng,groept,groupteng,brugge,brugeseng
+\campus{brugge} %denayer,denayereng,geel,geeleng,gent,ghenteng,groept,groupteng,brugge,brugeseng
 
 % onder embargo? laat leeg indien van niet; vul de datum in als dd-mm-yyyy indien van wel
-\embargo{25-10-2015}
+%\embargo{25-10-2015}
 
-\title{Titel masterproef}
-\subtitle{Ondertitel (facultatief)}
+\title{Genetic sequence alignment acceleration using a FPGA based platform}
+\subtitle{What methods can be used to accelerate the Smith-Waterman  algorithm for genetic sequence alignment with an FPGA equipped  platform?}
 % \author{naam student}
-\forenameA{Jan}
-\surnameA{Janssens}
+\forenameA{Robin}
+\surnameA{Nollet}
 
 % l
-\forenameB{Peter}
-\surnameB{Peeters}
+\forenameB{}
+\surnameB{}
 
-\academicyear{20xx - 20xx}
+\academicyear{2019 - 2020}
 
-\promotorA[Promotor(en)]{Prof. dr. ir. Grote Baas}
-\promotorB[Co-promotor(en)]{Prof. dr. ir. Andere Baas}
-\promotorC[]{dr. Bedrijf Baas (Bedrijf)}
+\promotorA[Supervisors]{Ing. Václav \v{S}imek}
+\promotorB[]{Ing. Jonas Lannoo}
+%\promotorC[]{dr. Bedrijf Baas (Bedrijf)}
 
 \begin{document}
-\selectlanguage{dutch}
-% \selectlanguage{english} % For the english version
+% \selectlanguage{dutch}
+\selectlanguage{english} % For the english version
 \preface
 
 \input{hfdst1}
@@ -115,13 +115,13 @@
 \input{bijlage1}
 
 % Back cover: change according to the correct campus
-\includepdf{private/back_fiiw_denayer.pdf}
+% \includepdf{private/back_fiiw_denayer.pdf}
 % \includepdf{private/back_fiiw_denayer_eng.pdf} % For the english version
 %\includepdf{private/back_fiiw_geel.pdf}
 % \includepdf{private/back_fiiw_geel_eng.pdf} % For the english version
 %\includepdf{private/back_fiiw_gent.pdf}
 % \includepdf{private/back_fiiw_ghent_eng.pdf} % For the english version
-%\includepdf{private/back_fiiw_brugge.pdf}
+\includepdf{private/back_fiiw_brugge.pdf}
 % \includepdf{private/back_fiiw_bruges_eng.pdf} % For the english version
 %\includepdf{private/back_fiiw_groept.pdf}
 % \includepdf{private/back_fiiw_groupt_eng.pdf} % For the english version
