eerste draft titeltjes

--- a/thesis.tex
+++ b/thesis.tex
@@ -97,11 +97,24 @@
 \selectlanguage{english} % For the english version
 \preface
 
-\input{hfdst1}
-\input{hfdst2}
-\input{hfdst3}
-\input{hfdst4}
-\input{hfdst5}
+
+%% Hereunder the included sections from the template:
+%\input{hfdst1}
+%\input{hfdst2}
+%\input{hfdst3}
+%\input{hfdst4}
+%\input{hfdst5}
+
+
+\input{H1_Inleiding}
+\input{H2_BIandElectronics}
+\input{H3_Methods}
+\input{H4_RMaccelerated}
+\input{H5_implementation}
+\input{H6_results}
+\input{H7_conclusions}
+
+
 % Bibliografie: referenties. De items zitten in bibliografie.bib
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Indien je ook de niet geciteerde werken in je bibliografie wil opnemen, commentarieer dan onderstaande regel uit!
