--- a/H2_BIandElectronics.tex
+++ b/H2_BIandElectronics.tex
@@ -9,6 +9,50 @@
 \section{Introduction to bioinformatics}
 
 \subsection{Biology and DNA}
+
+DNA, or Deoxyrebonucleic Acid, is what stores the genetic information of all living organisms. It is the information that programs all of the activities in a cell.
+
+\subsubsection{Structure of DNA}
+
+Structurally, DNA is a polymer, which means each molecule is built up out of small repeating molecular units. In DNA, these units are called \emph{nucleotides}.
+
+Each nucleotide consists of 3 parts:
+
+\begin{enumerate}
+	\item A carbon sugar molecule called \emph{Deoxyribose}. 
+	\item A phosphate group to connect the Deoxyribose molecules with eachother. 
+	\item One of four possible nitrogen bases: Adenine ($A$), Thymine ($T$), Cytosine ($C$) or Guanine ($G$)
+\end{enumerate}
+
+It is important to note that in most living organisms DNA does not exist as a single polymer, but rather a pair of molecules that are held thightly together. This is the famuous \emph{double helix}.
+
+Like in any good structure, there is a need for a main support. In DNA, the sugars and phosphates bond together to form twin backbones. These sugar-phosphate bonds run down each side of the helix, but chemically in opposite directions. 
+
+The first phosphate group, at the start of the molecule, connects to the sugar group's 5th carbon. At the end of the structure the 3rd carbon of the sugar group is unconnected. This makes a pattern typically noted as $[5' \rightarrow 3']$. Now, since the other molecule in the helix goes in the opposite direction, the pattern of the other backbone is typically noted as $[3' \rightarrow 5']$.
+
+These two long chaines are linked together by the nitrogen bases via their relatively weak hydrogenbonds, but there can't just be any pair of nitrogen bases. Adenine can only make hydrogen bonds with Thymine, likewise Guanine can only bond with Cytosine. These bonded nitrogenbases are called \emph{base paires}
+
+It is the order of these bases, which is also called the \emph{sequence}, that allows this DNA to store usefull information. In this way, e.g. $AGGTCCATG$ means something completely different as a base sequence than e.g. $TTCCAGATC$.
+
+Since each of the bases in the sequence has only one possible counterpart, you are able to predict what its matching counterpart will be in the opposite string. For example:
+
+If the following sequence is known
+$$[5' - AGGTCCG - 3']$$
+we can deduce the sequence in the other direction as
+$$[3' - TCCAGGC - 5']$$
+
+\subsubsection{DNA in the human body}
+
+In human cells, DNA molecules can be found in the nucleus of all cells in the body. It consists of 46 very long molecules, which during cell division condense in what we call \emph{chromosomes}. The only exception is reproductive cells, which only has 23 chromosomes. These chromosomes are packed tighly together in the nucleus of the cell. If all of these chromosomes are put together, this makes about 3 billion base pairs. These 3 billion base pairs provides the assembly instructions for pretty much everything inside the cell.
+
+These 46 chromosomes, which make up our whole DNA, are always present in pairs in the cells. Each time, the pair consists of one chromosome from each parent. 
+
+These 23 chromosome pairs are classified in 
+\begin{itemize}
+	\item 2 times 22 automomal chromosomes. These are marked 1 to 22 according to the length of the sequence. The longest chromosome (chromosome number-1) is 248,956,422 bases long. The shortest (chromosome number-22) is 50,818,468 bases long.
+	\item In each cell there is also an X chromosome plus an X or Y, dependent on the gender.
+\end{itemize}
+
 \subsection{Sequencing and the need for Bioinformatics}
 \subsection{DNA sequence aligning}
 \subsection{Clinical applications}
