history of genetics

--- a/H2_BIandElectronics.tex
+++ b/H2_BIandElectronics.tex
@@ -10,9 +10,23 @@
 
 \subsection{Biology and DNA}
 
-DNA, or Deoxyribonucleic Acid, is what stores the genetic information of all living organisms. It is the information that programs all of the activities in a cell.
+\subsubsection{History of genetics and DNA}
+
+\paragraph{The birth of genetics}
+
+For thousands of years, humans have observed the effects of heredity and implemented their knowledge to domesticate plants and animals. However, the science behind genetics was only started to be understood since 1859 with the publication of \emph{on the origin of species} by Charles Darwin. 
+
+Around 1865, Austrian monk and botanist Gregor Mendel, who studied at the university in Brno in the current Czech Republic, published his results on the hybridization studies of pea plants. In his findings, he implemented the role of \emph{factors} that influence the expression of traits. These factors later became known as \emph{genes}.
+
+\paragraph{The birth of molecular biology}
+
+In 1869, Swiss physician Friedrich Miescher discovered a microscopic substance in the pus of discarded surgical bandages. Later, in 1909, Phoebus Levene proposed the idea that this discovered substance is DNA.
+
+The full structure of DNA was discovered by Francis Crick and James Watson at the Cavendish Laboratory at the University of Cambridge.
 
 \subsubsection{Structure of DNA}
+
+DNA, or Deoxyribonucleic Acid, is what stores the genetic information of all living organisms. It is the information that programs all of the activities in a cell.
 
 Structurally, DNA is a polymer, which means each molecule is built up out of small repeating molecular units. In DNA, these units are called \emph{nucleotides}.
 
@@ -30,7 +44,7 @@ Like in any good structure, there is a need for the main support. In DNA, the su
 
 The first phosphate group, at the start of the molecule, connects to the sugar group's 5th carbon. At the end of the structure, the 3rd carbon of the sugar group is unconnected. This makes a pattern typically noted as $[5' \rightarrow 3']$. Now, since the other molecule in the helix goes in the opposite direction, the pattern of the other backbone is typically noted as $[3' \rightarrow 5']$.
 
-These two long chains are linked together by the nitrogen bases via their relatively weak hydrogen bonds, but there can't just be any pair of nitrogen bases. Adenine can only make hydrogen bonds with Thymine, likewise, Guanine can only bond with Cytosine. These bonded nitrogen bases are called \emph{base paires}
+These two long chains are linked together by the nitrogen bases via their relatively weak hydrogen bonds, but there can't just be any pair of nitrogen bases. Adenine can only make hydrogen bonds with Thymine, likewise, Guanine can only bond with Cytosine. These bonded nitrogen bases are called \emph{base paires}.
 
 It is the order of these bases, which is also called the \emph{sequence}, that allows this DNA to store useful information. In this way, e.g. $AGGTCCATG$ means something completely different as a base sequence than e.g. $TTCCAGATC$.
 
@@ -49,13 +63,14 @@ These 46 chromosomes, which make up our whole DNA, are always present in pairs i
 
 These 23 chromosome pairs are classified in 
 \begin{itemize}
-	\item 2 times 22 autosomal chromosomes. These are marked 1 to 22 according to the length of the sequence. The longest chromosome (chromosome number-1) is 248,956,422 bases long. The shortest (chromosome number-22) is 50,818,468 bases long.
+	\item 22 pairs of autosomal chromosomes. These are marked 1 to 22 according to the length of the sequence. The longest chromosome (chromosome number-1) is 248,956,422 bases long. The shortest (chromosome number-22) is 50,818,468 bases long.
 	\item In each cell, there is also an X chromosome plus an X or Y, dependent on the gender.
 \end{itemize}
 
 \subsection{Sequencing and the need for Bioinformatics}
 \subsection{DNA sequence aligning}
 \subsection{Clinical applications}
+
 
 \section{Platforms for sequence alignment algorithms}
 
