portrait Mendel test

--- a/H2_BIandElectronics.tex
+++ b/H2_BIandElectronics.tex
@@ -4,7 +4,7 @@
 %                                                                 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 
-\chapter{Introduction to bioinformatics and embedded systems}
+\chapter{Bioinformatics and embedded systems}
 
 \section{Introduction to bioinformatics}
 
@@ -14,9 +14,18 @@
 
 \paragraph{The birth of genetics}
 
-For thousands of years, humans have observed the effects of heredity and implemented their knowledge to domesticate plants and animals. However, the science behind genetics was only started to be understood since 1859 with the publication of \emph{on the origin of species} by Charles Darwin. 
+\begin{wrapfigure}{R}{0.25\textwidth}
+	%src: https://upload.wikimedia.org/wikipedia/commons/8/87/Gregor_Mendel_portrait.jpg
+	\begin{center}
+		\includegraphics[width=0.20\textwidth]{background/GregorMendel.jpg}
+		Gregor Mendel
+	\end{center}
+\end{wrapfigure}
 
-Around 1865, Austrian monk and botanist Gregor Mendel, who studied at the university in Brno in the current Czech Republic, published his results on the hybridization studies of pea plants. In his findings, he implemented the role of \emph{factors} that influence the expression of traits. These factors later became known as \emph{genes}.
+
+For thousands of years, humans have observed the effects of heredity and implemented their knowledge to domesticate plants and animals. However, the science behind heredity was only started to be understood since 1859 with the publication of \emph{on the origin of species} by Charles Darwin. 
+
+Around 1865, Austrian monk and botanist Gregor Mendel, who studied at the university in Brno in the current Czech Republic, published his results on the hybridization studies of pea plants. He is often credited as being the father of modern genetics. In his findings, he implemented the role of \emph{factors} that influence the expression of traits. These factors later became known as \emph{genes}.
 
 \paragraph{The birth of molecular biology}
 
@@ -68,6 +77,9 @@ These 23 chromosome pairs are classified in
 \end{itemize}
 
 \subsection{Sequencing and the need for Bioinformatics}
+
+
+
 \subsection{DNA sequence aligning}
 \subsection{Clinical applications}
 
