--- a/thesis.tex
+++ b/thesis.tex
@@ -34,6 +34,8 @@
 %\usepackage{latexsym}
 %\usepackage{amsmath}
 %\usepackage{amssymb}
+\usepackage{wrapfig}					% figuren met text die er rond wrapt
+\usepackage{minibox}					% voor randen rond multilijn text
 
 % MFA: zet zoekpad voor figure
 \graphicspath{{fig/}}
