--- a/H2_BIandElectronics.tex
+++ b/H2_BIandElectronics.tex
@@ -93,7 +93,7 @@ In human cells, DNA molecules can be found in the nucleus of all cells in the bo
 
 These 46 chromosomes, which make up our whole DNA, are always present in pairs in the cells. Each time, the pair consists of one chromosome from each parent. 
 
-These 23 chromosome pairs are classified in 
+These 23 chromosome pairs are classified in:
 \begin{itemize}
 	\item 22 pairs of autosomal chromosomes. These are marked 1 to 22 according to the length of the sequence. The longest chromosome (chromosome number-1) is 248,956,422 bases long. The shortest (chromosome number-22) is 50,818,468 bases long.
 	\item In each cell, there is also an X chromosome plus an X or Y, dependent on the gender.
@@ -109,16 +109,34 @@ These 23 chromosome pairs are classified in
 \end{figure}
 
 
-\subsection{Sequencing and the need for Bioinformatics}
+\subsection{The Human Genome Project and sequencing}
+
+\subsubsection{The Human Genome Project}
+
+In the field of Bioinformatics, an important dataset is the \emph{Human Genome}. This is the full string of DNA found in the Nucleus, ordered from chromosome 1 to 22, followed by the X and Y chromosome.
+
+In October 1990, biologists in the relatively new field of molecular biology started the Human Genome Project. The goal of this project was to determine the sequence of the 3 billion base pairs that make up the human DNA. This project was succesfully completed in 2003, So nowadays we have a good idea how the human genome is builtup.
+
+The Human Genome is easily found on the internet, since it is publically available. One of the most often used is \emph{HG19}. Since DNA has only 4 possible bases, this can be encoded in a 2 bit representation. If this encoding is used, the Human Genome is approximately 750 megabytes.
+
+\begin{figure}[!ht]
+	%src: https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Karyotype.png/800px-Karyotype.png
+	\centering
+	\includegraphics[width=\linewidth]{background/HG.png}
+	\caption{the order of the human genome}
+	\label{fig:HG}
+\end{figure}
+
+\subsubsection{Sequencing}
 
 
 
-\subsection{DNA sequence aligning}
 
+\subsection{DNA sequence aligning and Clinical applications}
 
+\subsubsection{DNA sequence aligning}
 
-\subsection{Clinical applications}
-
+\subsubsection{Clinical application}
 
 
 
