--- a/H2_BIandElectronics.tex
+++ b/H2_BIandElectronics.tex
@@ -50,7 +50,7 @@ Each nucleotide consists of 3 parts:
 
 \begin{enumerate}
 	\item A carbon sugar molecule called \emph{Deoxyribose}.
-	\item A phosphate group to connect the Deoxyribose molecules with eachother. 
+	\item A phosphate group to connect the Deoxyribose molecules with each other. 
 	\item One of four possible nitrogen bases: Adenine ($A$), Thymine ($T$), Cytosine ($C$) or Guanine ($G$).
 \end{enumerate}
 
@@ -115,9 +115,9 @@ These 23 chromosome pairs are classified in:
 
 In the field of Bioinformatics, an important dataset is the \emph{Human Genome}. This is the full string of DNA found in the Nucleus, ordered from chromosome 1 to 22, followed by the X and Y chromosome.
 
-In October 1990, biologists in the relatively new field of molecular biology started the Human Genome Project. The goal of this project was to determine the sequence of the 3 billion base pairs that make up the human DNA. This project was succesfully completed in 2003, So nowadays we have a good idea how the human genome is builtup.
+In October 1990, biologists in the relatively new field of molecular biology started the Human Genome Project. The goal of this project was to determine the sequence of the 3 billion base pairs that make up human DNA. This project was successfully completed in 2003, So nowadays we have a good idea of how the human genome is built up.
 
-The Human Genome is easily found on the internet, since it is publically available. One of the most often used is \emph{HG19}. Since DNA has only 4 possible bases, this can be encoded in a 2 bit representation. If this encoding is used, the Human Genome is approximately 750 megabytes.
+The Human Genome is easily found on the internet since it is publically available. One of the most often used is \emph{HG19}, which was published in 2009. Since DNA has only 4 possible bases, this can be encoded in a 2-bit representation. If this encoding is used, the Human Genome is approximately 750 megabytes.
 
 \begin{figure}[!ht]
 	%src: https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Karyotype.png/800px-Karyotype.png
@@ -129,6 +129,57 @@ The Human Genome is easily found on the internet, since it is publically availab
 
 \subsubsection{Sequencing}
 
+The term \emph{Sequencing} is used for all techniques to read and decipher the DNA code from a given snippet of DNA.
+
+During the last years, the techniques that sequence human DNA has changed quite a lot. For about 15 years the \emph{Next Generation Sequencing (NGS)} is the technique most often used. The biggest advantage of NGS, in comparison with other techniques, is the speed of the sequencing since it can sequence billions of short DNA molecules in parallel. In practice, this sequencing is most often done by the instruments of Illumina, which dominates the market (around 90\% market share).
+
+\paragraph{How NGS works}
+
+\begin{enumerate}
+	\item The DNA to sequence is isolated from the cells. Most often this is the whole genome.
+	\item The isolated DNA can now be copied enzymatically. This step is repeated until there are enough copies of the same DNA, most often this is in the millions or billions of copies.
+	
+	\begin{figure}[!ht]
+		%src: file:///D:/Erasmus/thesis/interessante%20papers/masterthesis%20BFAST%20op%20FPGA.pdf
+		\centering
+		\includegraphics[width=0.3\linewidth]{background/enzymCopying.png}
+		\caption{the enzymatic copying of a string of DNA. The original is unzipped, thus allowing new nucleotide bases to attach to the exposed bases}
+		\label{fig:enzymCopying}
+	\end{figure}
+	
+	\item The full DNA sequence is now broken apart into small DNA molecules (100 to 1000 bases long). This is done with the use of high-frequency sound waves.
+	\item Now the sequencing can start: a \emph{flow cell} is used where these small DNA molecules can bind to a glass surface. 
+	\item Different enzymatic and chemical reactions can now be done on this flow cell by means of an automatic flow of reagents. The following steps are iterated until the full read has been filled in:
+	\begin{enumerate}
+		\item The entire flowcell is filled with nucleotides, all with different nitrogen bases. Important is that at each of these nucleotides there is a fluorescent group attached to the phosphor group. This makes sure no other nucleotide can bind.
+		\item The fluorescent groups have a different color, dependent on the nitrogen base attached ($A$, $G$, $T$ of $C$). So, by taking a camera picture of the flowcell at this time and storing this.
+		\item after the flowcell is emptied of the loose nucleotides, another reagent flows in this flowcell. this reagent now unbinds the fluorescent group from the phosphor group. Because of this, the fluorescent group splits of the phosphor group. In the next iteration, a new nucleotide group can bind here.
+		
+		\begin{figure}[!ht]
+			%src: file:///D:/Erasmus/thesis/interessante%20papers/masterthesis%20BFAST%20op%20FPGA.pdf
+			\centering
+			\includegraphics[width=0.5\linewidth]{background/NGS.png}
+			\caption{Sequencing technology used by Illumina attaches a nucleotide with a fluorescent tag to the next base in the read, captures a picture the read to determine the base, and removes the fluorescent tag so a new nucleotide group can bind in the next iteration.}
+			\label{fig:NGS}
+		\end{figure}
+	\end{enumerate}
+
+	\item After the whole DNA snippets have been completely filled in, the machine deduces the sequence in the DNA snippet. The pictures taken during the operation are in order the colors released in a specific spot, and by extent the attached nitrogen base. By the means of some image processing techniques, it is quite easy to get all the sequences in the flowcell. this is called the \emph{Primary processing}.
+	
+	\begin{figure}[!ht]
+		%src: file:///D:/Erasmus/thesis/interessante%20papers/masterthesis%20BFAST%20op%20FPGA.pdf
+		\centering
+		\includegraphics[angle= -90, width=\linewidth]{background/ImProc.png}
+		\caption{From left to right is the pictures taken at each iteration in the flowcell. The color at that specific spot marks which nucleotide has been bound. With the use of some image processing techniques the exact sequence in that spot can be identified.}
+		\label{fig:ImProc}
+	\end{figure}
+	
+	\item In the \emph{secundary processing}, the sequence is trimmed by quality, etc. The operations that are done on the read in this step are outside the scope of this thesis
+\end{enumerate}
+
+As a result of the NGS, we get a file in the FASTQ format.
+
+\paragraph{FASTQ file format}
 
 
 
