Refactor titeltjes and general introduction alignment

--- a/H3_ELbackground.tex
+++ b/H3_ELbackground.tex
@@ -4,6 +4,15 @@
 %                                                                 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 
-\chapter{Conclusion and future research}
+\chapter{Platforms for sequence alignment algorithms}
 
-...
+Most sequence alignment algorithms are heavily parallelisable. An overview of the most frequently used algorithms is given in chapter \ref{ch:algoverzicht}.
+
+\section{Overview of possible hardware}
+
+\section{CPU}
+\section{GPU}
+\section{FPGA}
+\section{ASIC}
+
+
