--- a/thesis.tex
+++ b/thesis.tex
@@ -141,12 +141,13 @@
 
 
 \input{H1_Inleiding}
-\input{H2_BIandElectronics}
-\input{H3_Methods}
-\input{H4_RMaccelerated}
-\input{H5_implementation}
-\input{H6_results}
-\input{H7_conclusions}
+\input{H2_MBbackground}
+\input{H3_ELbackground}
+\input{H4_Methods}
+\input{H5_RMaccelerated}
+\input{H6_implementation}
+\input{H7_results}
+\input{H8_conclusions}
 
 
 % Bibliografie: referenties. De items zitten in bibliografie.bib
