--- a/H2_MBbackground.tex
+++ b/H2_MBbackground.tex
@@ -4,13 +4,11 @@
 %                                                                 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 
-\chapter{Bioinformatics and embedded systems}
+\chapter{Background information in molecular biology}
 
-\section{Introduction to bioinformatics}
+\section{Biology and DNA}
 
-\subsection{Biology and DNA}
-
-\subsubsection{History of genetics and DNA}
+\subsection{History of genetics and DNA}
 
 \paragraph{Genetics}
 
@@ -33,7 +31,7 @@ In 1869, Swiss physician Friedrich Miescher discovered a microscopic substance i
 
 The full structure of DNA was discovered by Francis Crick and James Watson at the Cavendish Laboratory at the University of Cambridge.
 
-\subsubsection{Structure of DNA}
+\subsection{Structure of DNA}
 
 DNA, or Deoxyribonucleic Acid, is what stores the genetic information of all living organisms. It is the information that programs all of the activities in a cell.
 
@@ -87,7 +85,7 @@ $$[5' - AGGTCCG - 3']$$
 we can deduce the sequence in the other direction as
 $$[3' - TCCAGGC - 5']$$
 
-\subsubsection{DNA in the human body}
+\subsection{DNA in the human body}
 
 In human cells, DNA molecules can be found in the nucleus of all cells in the body. It consists of 46 very long molecules, which during cell division condense in what we call \emph{chromosomes}. The only exception is in reproductive cells, which only have 23 chromosomes. These chromosomes are packed tightly together in the nucleus of the cell. If all of these chromosomes are put together, this makes about 3 billion base pairs. These 3 billion base pairs provide the assembly instructions for pretty much everything inside the cell.
 
@@ -109,7 +107,7 @@ These 23 chromosome pairs are classified in:
 \end{figure}
 
 
-\subsection{The Human Genome Project}
+\section{The Human Genome Project}
 
 In the field of Bioinformatics, an important dataset is the \emph{Human Genome}. This is the full string of DNA found in the Nucleus, ordered from chromosome 1 to 22, followed by the X and Y chromosome.
 
@@ -125,9 +123,9 @@ The Human Genome is easily found on the internet since it is publically availabl
 	\label{fig:HG}
 \end{figure}
 
-\subsection{Sequencing}
+\section{Sequencing}
 
-\subsubsection{The sequencing technology}
+\subsection{The sequencing technology}
 
 The term \emph{Sequencing} is used for all techniques to read and decipher the DNA code from a given snippet of DNA. During the last years, the techniques that sequence human DNA has changed quite a lot. For about 15 years the \emph{Next Generation Sequencing (NGS)} is the technique most often used. The biggest advantage of NGS, in comparison with other techniques, is the speed of the sequencing since it can sequence billions of short DNA molecules in parallel. In practice, this sequencing is most often done by the instruments of Illumina, which dominates the market (around 90\% market share).
 
@@ -150,8 +148,8 @@ The term \emph{Sequencing} is used for all techniques to read and decipher the D
 	\item Different enzymatic and chemical reactions can now be done on this flow cell through an automatic flow of reagents. The following steps are iterated until the full read has been filled in:
 	\begin{enumerate}
 		\item The entire flowcell is filled with nucleotides, all with different nitrogen bases. Important is that at each of these nucleotides there is a fluorescent group attached to the phosphor group. This makes sure no other nucleotide can bind.
-		\item The fluorescent groups have a different color, dependent on the nitrogen base attached ($A$, $G$, $T$ of $C$). So, by taking a camera picture of the flowcell at this time and storing this.
-		\item after the flowcell is emptied of the loose nucleotides, another reagent flows in this flowcell. this reagent now unbinds the fluorescent group from the phosphor group. Because of this, the fluorescent group splits of the phosphor group. In the next iteration, a new nucleotide group can bind here.
+		\item The fluorescent groups have a different color, dependent on the nitrogen base attached ($A$, $G$, $T$ of $C$). At this time a camera picture of the flowcell is taken and stored.
+		\item after the flowcell is emptied of the loose nucleotides, another reagent flows in this flowcell. This reagent now unbinds the fluorescent group from the phosphor group. Because of this, the fluorescent group splits of the phosphor group. In the next iteration, a new nucleotide group can bind with the read.
 		
 		\begin{figure}[H]
 			%src: file:///D:/Erasmus/thesis/interessante%20papers/masterthesis%20BFAST%20op%20FPGA.pdf
@@ -177,7 +175,7 @@ The term \emph{Sequencing} is used for all techniques to read and decipher the D
 
 As a result of the NGS, we get a file in the FASTQ format.
 
-\subsubsection{The FASTQ file format}
+\subsection{The FASTQ file format}
 
 Since the color in the camera pictures in the primary processing can have a light shift, there is a specific "uncertainty" what the base is in that spot. This is called the \emph{quality} of the base.
 
@@ -215,21 +213,4 @@ GATTTGGGGTTCAAAGCAGTATCGATCAAATAGTAAATCCATTTGTTCAACTCACAGTTT
 
 Keep in mind that most of the time a FASTQ file consists of multiple of these sequences, all stacked under each other.
 
-\subsection{DNA sequence aligning and Clinical applications}
 
-\subsubsection{DNA sequence aligning}
-
-
-
-\subsubsection{Clinical application}
-
-
-
-\section{Platforms for sequence alignment algorithms}
-
-\subsection{CPU}
-\subsection{GPU}
-\subsection{FPGA}
-\subsection{ASIC}
-
-\section{Problem definition}
